updated extension with widget and small changes

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -5,9 +5,11 @@
   "description": "Capture job URLs and track your job applications",
   "permissions": [
     "activeTab",
+    "tabs",
     "notifications",
     "storage",
-    "scripting"
+    "scripting",
+    "identity"
   ],
   "host_permissions": [
     "https://*/*",
@@ -20,6 +22,12 @@
     "default_popup": "popup.html",
     "default_title": "JobTrackr - Capture Job URL"
   },
+  "web_accessible_resources": [
+    {
+      "resources": ["config.js"],
+      "matches": ["<all_urls>"]
+    }
+  ],
   "commands": {
     "capture-job-url": {
       "suggested_key": {
