backend lambda code

--- a/backend-lambda/.env.example
+++ b/backend-lambda/.env.example
@@ -1,7 +1,17 @@
 # Firecrawl API Configuration
 FIRECRAWL_API_KEY=your-firecrawl-api-key-here
 
-# AWS Bedrock Configuration
-BEDROCK_MODEL_ID=us.anthropic.claude-sonnet-4-20250514-v1:0
+# LLM Provider Configuration
+# Choose 'anthropic' or 'bedrock'
+LLM_PROVIDER=anthropic
+
+# Anthropic API Configuration (if using LLM_PROVIDER=anthropic)
+ANTHROPIC_API_KEY=your-anthropic-api-key-here
+ANTHROPIC_MODEL_ID=claude-haiku-4-5-20251001
+
+# AWS Bedrock Configuration (if using LLM_PROVIDER=bedrock)
+BEDROCK_MODEL_ID=us.anthropic.claude-haiku-4-5-20251001-v1:0
 AWS_DEFAULT_REGION=us-east-2
-BEDROCK_MAX_TOKENS=10000
+
+# Common Configuration
+MAX_TOKENS=2000
