--- a/backend-lambda/dependencies/requirements.txt
+++ b/backend-lambda/dependencies/requirements.txt
@@ -1,4 +1,6 @@
 boto3==1.35.0
 firecrawl-py==0.0.17
-langchain==0.2.0
-pydantic==2.8.0
+langchain==0.3.0
+langchain-core==0.3.0
+pydantic==2.10.0
+anthropic==0.42.0
